2004-09-03 Chris Wiebe

	add support for IDeferredWorkbenchAdapter
	* src/org/eclipse/cdt/internal/ui/CElementAdapterFactory.java
	* src/org/eclipse/cdt/internal/ui/DeferredCWorkbenchAdapter.java

2004-09-03 Alain Magloire

	The Binaries were not showing children.

	* src/org/eclipse/cdt/internal/ui/BaseCElementContentProvider.java

2004-09-03 Alain Magloire

	Provide key binding for AddInclude action
	* src/org/eclipse/cdt/internal/ui/editor/AddIncludeOnSelectionAction.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties
	* plugin.xml
	* plugin.properties

2004-09-02 Alain Magloire
	
	Deal with WorkingCopy vs TranslationUnit in the hashCode.
	* src/org/eclipse/cdt/internal/ui/cview/CViewElementComparer.java

2004-09-02 Bogdan Gheorghe
	Fix for 72816: [Search] Selection Search For Working Set
	
	* src/org/eclipse/cdt/internal/ui/search/CSearchUtil.java
	* src/org/eclipse/cdt/internal/ui/search/LRUWorkingSets.java
	* src/org/eclipse/cdt/internal/ui/search/actions/DeclarationsSearchGroup.java
	* src/org/eclipse/cdt/internal/ui/search/actions/FindDeclarationsInWorkingSetAction.java
	* src/org/eclipse/cdt/internal/ui/search/actions/FindRefsInWorkingSetAction.java
	* src/org/eclipse/cdt/internal/ui/search/actions/ReferencesSearchGroup.java
	* src/org/eclipse/cdt/internal/ui/search/actions/WorkingSetFindAction.java

	
2004-09-01 Alain Magloire

	Deal with the fact that elements can come
	from WorkingCopy or TranslationUnit
	* src/org/eclipse/cdt/internal/ui/cview/CViewElementComparer.java

2004-08-31 Alain Magloire

	Provide a Proxy wrapper for the includeRefence class
	This will allow us to provide special Icon, a correct
	getParent() etc .. in the C/C++ view.
	* src/org/eclipse/cdt/internal/ui/cview/CViewContentProvider.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewLabelProvider.java
	* src/org/eclipse/cdt/internal/ui/cview/IncludeRefContainer.java