@@ -1,3 +1,8 @@
+2004-09-04 Alain Magloire
+
+	Fix for PR 73118
+	* refactor/org/eclipse/cdt/internal/ui/refactoring/actions/RenameRefactoringAction.java
+
 2004-09-03 Chris Wiebe
 
 	add support for IDeferredWorkbenchAdapter
